--- a/templates/index.html
+++ b/templates/index.html
@@ -101,19 +101,19 @@
             <h1></h1>
             <h2></h2>
             <div class="product-grid">
-                <a href="green-tea.html" class="product-card">
+                <a href="category_view.html?category=green" class="product-card">
                     <img src="../static/greentea.png" alt="Tea 1">
                     <h3>Green Tea</h3>
                     <p>A powerful elixir for heart health, </p>
                      <p> brain function, and overall well-being.</p>
                 </a>
-                <a href="black-tea.html" class="product-card">
+                <a href="category_view.html?category=black" class="product-card">
                     <img src="../static/6-4.jpg" alt="Tea 2">
                     <h3>Black Tea</h3>
                     <p>Energize your day with enhanced focus,</p>
                        <p>digestive support, and antioxidant-rich benefits</p>
                 </a>
-                <a href="oolong-tea.html" class="product-card">
+                <a href="category_view.html?category=white" class="product-card">
                     <img src="../static/istockphoto-1146980588-612x612.jpg" alt="Tea 3">
                     <h3>White Tea</h3>
                     <p>Subtle elegance with benefits for hydration,</p>
@@ -122,41 +122,41 @@
             </div>
             <h2></h2>
             <div class="product-grid">
-                <a href="green-tea.html" class="product-card">
+                <a href="category_view.html?category=fruit" class="product-card">
                     <img src="../static/Screenshot 2024-07-30 220832.png" alt="Tea 1">
                     <h3>Fruit Blends</h3>
                     <p> A burst of flavor packed with vitamins, </p>
                       <p>antioxidants, and refreshing hydration</p>
                 </a>
-                <a href="black-tea.html" class="product-card">
+                <a href="category_view.html?category=matcha" class="product-card">
                     <img src="../static/Screenshot 2024-07-30 222851.png" alt="Tea 2">
                     <h3>Matcha Blends</h3>
                     <p>Elevate your day with sustained energy,</p>
                       <p> mental clarity, and immune-boosting properties</p>
                 </a>
-                <a href="oolong-tea.html" class="product-card">
+                <a href="category_view.html?category=herbal" class="product-card">
                     <img src="../static/Screenshot 2024-07-30 222401.png" alt="Tea 3">
                     <h3>Herbal Tea</h3>
                     <p> Embrace wellness with calming effects,</p>
                      <p> improved digestion, and rich antioxidants</p>
-                     \
+                     
                 </a>
             </div>
              <h2></h2>
             <div class="product-grid">
-                <a href="green-tea.html" class="product-card">
+              <a href="category_view.html?category=rooibos" class="product-card">
                     <img src="../static/Screenshot 2024-07-30 224004.png" alt="Tea 1">
                     <h3>Rooibos & Honey Bush</h3>
                     <p> Naturally caffeine-free, boosts immunity, </p>
                       <p>promotes healthy skin, and supports bone health.</p>
                 </a>
-                <a href="black-tea.html" class="product-card">
+                <a href="category_view.html?category=oolong" class="product-card">
                     <img src="../static/Screenshot 2024-07-30 224610.png" alt="Tea 2">
                     <h3>Premium Oolong</h3>
                     <p> Combines the benefits of green and black tea :</p>
                       <p> balanced energy, skin health, and antioxidant.</p>
                 </a>
-                <a href="oolong-tea.html" class="product-card">
+                <a href="category_view.html?category=other" class="product-card">
                     <img src="../static/Screenshot 2024-07-30 224811.png" alt="Tea 3">
                     <h3>Other</h3>
                     <p>Discover a world of flavors and benefits with </p>
@@ -164,8 +164,9 @@
                 </a>
             </div>
         </div>
+        
     </section>
-    
+  
    
     
     </section>
