--- a/templates/item_view.html
+++ b/templates/item_view.html
@@ -74,7 +74,7 @@
       </div>
     
       <div class="favorite-add-btn">
-        <button id="favoriteBtn">♡</button>
+        <button id="favoriteBtn" onclick="toggle()">♡</button>
         <button id="addToCartBtn">Add To Cart</button>
       </div>
     </div>
