--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/category.css">
-    <title>Search Results</title>
+    <link rel="icon" type="image/png" href="../static/tea8.png">
+    <title>Search</title>
 </head>
 
 <body>
