--- a/templates/cart.html
+++ b/templates/cart.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/cart.css">
+    <link rel="icon" type="image/png" href="../static/tea8.png">
     <title>Cart</title>
 </head>
 <body>
