--- a/templates/category_view.html
+++ b/templates/category_view.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/category.css">
+    <link rel="icon" type="image/png" href="../static/tea8.png">
     <title>Category</title>
 </head>
 
