--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/Item.css">
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="icon" type="image/png" href="../static/tea8.png">
     <title>Homepage</title>
 </head>
 <body>
