--- a/templates/payByCard.html
+++ b/templates/payByCard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/Item.css">
     <link rel="stylesheet" href="../css/checkout.css">
+    <link rel="icon" type="image/png" href="../static/tea8.png">
     <title>Document</title>
 </head>
 <body>
