--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,9 @@
                   <li><a class="dropdown-item" href="#">Logout <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
                 </ul>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./empty.html">Empty Page</a>
+              </li>
              
             </ul>
             <div class="d-flex">
