--- a/templates/login.html
+++ b/templates/login.html
@@ -12,47 +12,7 @@
     <link rel="icon" type="image/png" href="../static/tea8.png">
     <title>Login</title>
 </head>
-<body>
-    
-            
-      <!-- Nav -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">
-                <img src="../static/logo.png" alt="" width="100" height="100">
-              </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Account
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="./signup.html"><i class="fa fa-user" aria-hidden="true"></i> Sign Up</a></li>
-                  <li><a class="dropdown-item" href="./login.html"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Logout <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="./cart.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
-            </li>
-            </ul>
-            <div class="d-flex">
-              <input id="serachbar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-             
-              <button class="btn btn-success" type="submit" onclick="search()">Search</button>
-            </div>
-          </div>
-        </div>
-      </nav>
-      
+<body>  
     <div class="login-container">
         <h1 class="account-title">My account</h1>
         <div class="login-box">
@@ -73,6 +33,7 @@
                 <div class="error-message" id="loginError" hidden>Invalid username or password.</div>
                 <button type="submit" class="btn-log" id="login-btn">Login</button>
                 <a href="#" class="lost-password">Lost your password?</a>
+                <a href="./signup.html" class="lost-password">Have an account?</a>
             </form>
         </div>
 </body>
