--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: Arial, sans-serif;
-  background-color: var(--lion);
+  background-color: var(--beige);
 }
 
 main {
