--- a/css/Item.css
+++ b/css/Item.css
@@ -1,6 +1,16 @@
+/* CSS Color Pallette */
+:root {
+  --cambridge-blue: #8aa387;
+  --beige: #f5f5dc;
+  --lion: #a68a64;
+  --dark-moss-green: #556b2f;
+  --paynes-gray: #3a606e;
+  --white: #ffffffec;
+}
+
 body {
   font-family: Arial, sans-serif;
-  background-color: #ffffffec;
+  background-color: var(--beige);
   margin: 0;
   padding: 0;
 }
