--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,7 @@
   </section>
   <h2></h2>
 </main>
-<footer>
+<footer class="mt-4">
   <div class="container1">
     <div class="footer-section">
       <ul class="social-icons">
@@ -205,7 +205,7 @@
       <ul>
         <li><i class="fa fa-map-marker"></i>First Branch Location</li>
         <li><i class="fa fa-map-marker"></i>Second Branch Location</li>
-        <li><i class="fa fa-phone"></i> 00961 71 806438</li>
+        <li><i class="fa fa-phone"></i> 00961 81 192894</li>
         <li><i class="fa fa-envelope"></i> tea@teahouse.com</li>
       </ul>
     </div>
@@ -217,7 +217,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>Copyright Tea House | by Mr. Website</p>
+    <p>Copyright Tea House | by Team Tea House</p>
   </div>
 </footer>
 <script src="../js/index.js"></script>
