--- a/templates/signup.html
+++ b/templates/signup.html
@@ -45,11 +45,11 @@
             <button id="googleSignup">Signup with Google</button>
             <button id="facebookSignup">Signup with Facebook</button>
         </div>
-        <a href="./login.html" >Don't have an account?</a>
+        <a href="./login.html" class="lost-password">Don't have an account?</a>
   </div>
 
 </body>
-<footer>
+<footer class="mt-4">
   <div class="container1">
     <div class="footer-section">
       <ul class="social-icons">
@@ -68,7 +68,7 @@
       <ul>
         <li><i class="fa fa-map-marker"></i>First Branch Location</li>
         <li><i class="fa fa-map-marker"></i>Second Branch Location</li>
-        <li><i class="fa fa-phone"></i> 00961 71 806438</li>
+        <li><i class="fa fa-phone"></i> 00961 81 192894</li>
         <li><i class="fa fa-envelope"></i> tea@teahouse.com</li>
       </ul>
     </div>
@@ -80,7 +80,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>Copyright Tea House | by Mr. Website</p>
+    <p>Copyright Tea House | by Team Tea House</p>
   </div>
 </footer>
 <script src="../js/index.js"></script>
