--- a/templates/category_view.html
+++ b/templates/category_view.html
@@ -56,7 +56,7 @@
     <div class="product-grid" id="content"></div>
 
     <!-- Footer -->
-    <footer>
+    <footer class="mt-4">
       <div class="container1">
         <div class="footer-section">
           <ul class="social-icons">
@@ -75,7 +75,7 @@
           <ul>
             <li><i class="fa fa-map-marker"></i>First Branch Location</li>
             <li><i class="fa fa-map-marker"></i>Second Branch Location</li>
-            <li><i class="fa fa-phone"></i> 00961 71 806438</li>
+            <li><i class="fa fa-phone"></i> 00961 81 192894</li>
             <li><i class="fa fa-envelope"></i> tea@teahouse.com</li>
           </ul>
         </div>
@@ -87,7 +87,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>Copyright Tea House | by Mr. Website</p>
+        <p>Copyright Tea House | by Team Tea House</p>
       </div>
     </footer>
     <script src="../js/index.js"></script>
