--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -115,7 +115,7 @@
     </div> 
 <script src="../js/checkout.js"></script> 
 </body>
-<footer>
+<footer class="mt-4">
   <div class="container1">
     <div class="footer-section">
       <ul class="social-icons">
@@ -134,7 +134,7 @@
       <ul>
         <li><i class="fa fa-map-marker"></i>First Branch Location</li>
         <li><i class="fa fa-map-marker"></i>Second Branch Location</li>
-        <li><i class="fa fa-phone"></i> 00961 71 806438</li>
+        <li><i class="fa fa-phone"></i> 00961 81 192894</li>
         <li><i class="fa fa-envelope"></i> tea@teahouse.com</li>
       </ul>
     </div>
@@ -146,7 +146,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>Copyright Tea House | by Mr. Website</p>
+    <p>Copyright Tea House | by Team Tea House</p>
   </div>
 </footer>
 <script src="../js/index.js"></script>
