--- a/templates/empty.html
+++ b/templates/empty.html
@@ -54,40 +54,40 @@
         <img src="../static/BlueFlower.png" alt="">
      </div>
 
-<footer>
-  <div class="container1">
-    <div class="footer-section">
-      <ul class="social-icons">
-        <li><a href="https://facebook.com" target="_blank"><i class="fa fa-facebook"></i> Facebook</a></li>
-        <li><a href="https://instagram.com" target="_blank"><i class="fa fa-instagram"></i> Instagram</a></li>
-      </ul>
-    </div>
-    <div class="footer-section">
-      <ul>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Refunds & Replacement</a></li>
-        <li><a href="#">About Tea House </a></li>
-      </ul>
-    </div>
-    <div class="footer-section">
-      <ul>
-        <li><i class="fa fa-map-marker"></i>First Branch Location</li>
-        <li><i class="fa fa-map-marker"></i>Second Branch Location</li>
-        <li><i class="fa fa-phone"></i> 00961 71 806438</li>
-        <li><i class="fa fa-envelope"></i> tea@teahouse.com</li>
-      </ul>
-    </div>
-    <div class="footer-section">
-      <ul>
-        <li>Shipping All Over Lebanon</li>
-        <li>Delivery within two working days.</li>
-      </ul>
-    </div>
-  </div>
-  <div class="footer-bottom">
-    <p>Copyright Tea House | by Mr. Website</p>
-  </div>
-</footer>
+     <footer class="mt-4">
+      <div class="container1">
+        <div class="footer-section">
+          <ul class="social-icons">
+            <li><a href="https://facebook.com" target="_blank"><i class="fa fa-facebook"></i> Facebook</a></li>
+            <li><a href="https://instagram.com" target="_blank"><i class="fa fa-instagram"></i> Instagram</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <ul>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Refunds & Replacement</a></li>
+            <li><a href="#">About Tea House </a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <ul>
+            <li><i class="fa fa-map-marker"></i>First Branch Location</li>
+            <li><i class="fa fa-map-marker"></i>Second Branch Location</li>
+            <li><i class="fa fa-phone"></i> 00961 81 192894</li>
+            <li><i class="fa fa-envelope"></i> tea@teahouse.com</li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <ul>
+            <li>Shipping All Over Lebanon</li>
+            <li>Delivery within two working days.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright Tea House | by Team Tea House</p>
+      </div>
+    </footer>
 <script src="../js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
