--- a/templates/orderComplete.html
+++ b/templates/orderComplete.html
@@ -59,7 +59,7 @@
       <a href="./index.html" class="btn btn-success">Go Back</a>
  </div>
 </body>
-<footer>
+<footer class="mt-4">
   <div class="container1">
     <div class="footer-section">
       <ul class="social-icons">
@@ -78,7 +78,7 @@
       <ul>
         <li><i class="fa fa-map-marker"></i>First Branch Location</li>
         <li><i class="fa fa-map-marker"></i>Second Branch Location</li>
-        <li><i class="fa fa-phone"></i> 00961 71 806438</li>
+        <li><i class="fa fa-phone"></i> 00961 81 192894</li>
         <li><i class="fa fa-envelope"></i> tea@teahouse.com</li>
       </ul>
     </div>
@@ -90,7 +90,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>Copyright Tea House | by Mr. Website</p>
+    <p>Copyright Tea House | by Team Tea House</p>
   </div>
 </footer>
 
