--- a/css/checkout.css
+++ b/css/checkout.css
@@ -6,7 +6,7 @@
     transition: all .2s linear;
 }
 
-.container {
+.container2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,7 +15,7 @@
     background-color:#ffffffec; 
 }
 
-.container form{
+.container2 form{
     padding: 20px;
     width: 100%;
     max-width: 700px;
