--- a/templates/payByCard.html
+++ b/templates/payByCard.html
@@ -52,7 +52,7 @@
     <!-- content -->
     <h3 class="title">Payment</h3>
 
-    <div class="container">
+    <div class="container2">
         <form id="complete">
             <div class="col2">
                 <div class="inputBox">
