--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -50,6 +50,7 @@
           </div>
         </nav>
     <!-- content -->
+    <main class="flex-grow-1">
       <div class="container">
         <form id="checkoutForm">
             <div class="row">
@@ -112,7 +113,8 @@
         
             <input type="submit" value="Proceed to Checkout" class="submitbtn">
         </form>
-    </div> 
+    </div>
+ </main>
 <script src="../js/checkout.js"></script> 
 </body>
 <footer class="mt-4">
