--- a/css/order.css
+++ b/css/order.css
@@ -11,8 +11,12 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    margin-top:30px;
 }
-
+.back{
+    margin-top:20px;
+    text-align: center;
+}
 img {
     width: 100px;
     height: auto;
