--- a/templates/orderComplete.html
+++ b/templates/orderComplete.html
@@ -55,7 +55,7 @@
         <h1>Order Is Completed!</h1>
         <p>Thank you for your purchase. Your order has been successfully placed.</p>
     </div>
-    <div class="container">
+    <div class="back">
       <a href="./index.html" class="btn btn-success">Go Back</a>
  </div>
 </body>
