--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/Item.css">
     <link rel="stylesheet" href="../css/checkout.css">
     <link rel="icon" type="image/png" href="../static/tea8.png">
     <title>Checkout</title>
@@ -51,7 +50,7 @@
         </nav>
     <!-- content -->
     <main class="flex-grow-1">
-      <div class="container">
+      <div class="container2">
         <form id="checkoutForm">
             <div class="row">
                 <div class="col1">
