--- a/css/Item.css
+++ b/css/Item.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: var(--beige);
+  background-color: var(--white);
   margin: 0;
   padding: 0;
 }
