--- a/css/cart.css
+++ b/css/cart.css
@@ -1,16 +1,27 @@
 /* Item card styles */
+:root {
+    --cambridge-blue: #8aa387;
+    --beige: #f5f5dc;
+    --lion: #a68a64;
+    --dark-moss-green: #556b2f;
+    --paynes-gray: #3a606e;
+    --white: #ffffffec;
+}
+
 .item-card {
     border: 1px solid #e0e0e0;
-    border-radius: 10px;
+    border-radius: 8px;
     overflow: hidden;
-    margin-bottom: 20px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    margin-bottom: 15px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1); 
     background-color: #fff;
     transition: all 0.3s ease;
+    font-size: 0.9rem; 
+    padding: 15px; 
 }
 
 .item-card:hover {
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1); 
     transform: translateY(-2px);
 }
 
@@ -24,23 +35,27 @@
 }
 
 .item-card .card-body {
-    padding: 20px;
+    padding: 5px; 
 }
 
 .card-title {
     font-weight: bold;
-    color: #333;
+    color: var(--dark-moss-green);
+    font-size: 1.3rem; 
+    padding-top:20px;
+
 }
 
 .card-text {
-    color: #666;
+    color: var(--lion);
+    font-size: 1.1rem;
 }
 
-/* Image styles */
+
 .image-thing {
     width: 100%;
     height: 0;
-    padding-bottom: 100%;
+    padding-bottom: 75%; 
     position: relative;
     overflow: hidden;
 }
@@ -49,23 +64,25 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: auto;
     object-fit: cover;
     border: 2px solid #f0f0f0;
     box-sizing: border-box;
-    border-radius: 10px;
+    border-radius: 8px; 
     transition: all 0.3s ease;
 }
 
 .image-thing img:hover {
-    transform: scale(1.05);
+    transform: scale(1.03); 
 }
 
-/* Button styles */
+
 .btn {
     border-radius: 5px;
     font-weight: 500;
+    font-size: 1rem;
+    padding: 5px 10px; 
 }
 
 .btn-outline-secondary {
@@ -97,12 +114,12 @@
 }
 
 #cartItems + .row .card-body {
-    padding: 25px;
+    padding: 20px; 
 }
 
 #cartItems + .row .card-title {
-    color: #333;
-    font-size: 1.25rem;
+    color: var(--dark-moss-green);
+    font-size: 1.3rem;
     margin-bottom: 20px;
 }
 
@@ -118,7 +135,7 @@
     margin-bottom: 20px;
 }
 
-/* Responsive adjustments */
+
 @media (max-width: 768px) {
     .item-card .col-md-4,
     .item-card .col-md-8 {
@@ -129,3 +146,25 @@
         padding-bottom: 75%;
     }
 }
+#checkoutBtn{
+    margin-top:10px;
+}
+
+
+.d-flex {
+    display: flex;
+}
+
+.align-items-start {
+    align-items: flex-start;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.mt-auto {
+    margin-top: auto;
+}
+
+
