--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -107,9 +107,10 @@
                     <input type="radio" name="pay" id="omt">
                 </div>
             </div>
-        
-            <h2 class="title">Total Amount: <span id="amount"></span></h2>
-        
+             <div class="col2">
+              <label>Total Amount:</label>
+              <p id="amount"></p>
+            </div>
             <input type="submit" value="Proceed to Checkout" class="submitbtn">
         </form>
     </div>
