--- a/templates/filter.html
+++ b/templates/filter.html
@@ -7,28 +7,35 @@
     <link rel="stylesheet" href="../css/filter.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Filter Page</h1>
-            <div class="search-section">
-                <form action="" onsubmit="return false">
-                    <input type="text" id="search" placeholder="Search Product">
-                </form>
-            </div>
-            <div class="filter-box">
-                <a href="#" class="btn active" data-filter="all">ALL</a>
-                <a href="#" class="btn" data-filter="greentea">GREEN TEA</a>
-                <a href="#" class="btn" data-filter="blackteaa">BLACK TEA</a>
-                <a href="#" class="btn" data-filter="whitetea">WHITE TEA</a>
-                <a href="#" class="btn" data-filter="herbaltea">HERBAL TEA</a>
-                <a href="#" class="btn" data-filter="matchablends">MATCHA BLENDS</a>
-                <a href="#" class="btn" data-filter="rooiboshoneybush">ROOIBOS & HONEY BUSH</a>
-                <a href="#" class="btn" data-filter="fruitblends">FRUIT BLENDS</a>
-                <a href="#" class="btn" data-filter="premiumoolong">PREMIUM OOLONG</a>
-            </div>
+<header>
+    <div class="container">
+        <h1>Filter Page</h1>
+        <div class="search-section">
+            <form action="" onsubmit="return false">
+                <input type="text" id="search" placeholder="Search Product">
+            </form>
         </div>
-    </header>
-    <section class="container" id="store-products"></section>
-    <script src="../js/filter.js"></script>
+        <div class="filter-box">
+            <a href="#" class="btn active" data-filter="all">ALL</a>
+            <a href="#" class="btn" data-filter="greentea">GREEN TEA</a>
+            <a href="#" class="btn" data-filter="blacktea">BLACK TEA</a>
+            <a href="#" class="btn" data-filter="whitetea">WHITE TEA</a>
+            <a href="#" class="btn" data-filter="herbaltea">HERBAL TEA</a>
+            <a href="#" class="btn" data-filter="matchablends">MATCHA BLENDS</a>
+            <a href="#" class="btn" data-filter="rooiboshoneybush">ROOIBOS & HONEY BUSH</a>
+            <a href="#" class="btn" data-filter="fruitblends">FRUIT BLENDS</a>
+            <a href="#" class="btn" data-filter="premiumoolong">PREMIUM OOLONG</a>
+        </div>
+        <div class="price-range-section">
+            <label for="min-price">Min Price:</label>
+            <input type="number" id="min-price" placeholder="0">
+            <label for="max-price">Max Price:</label>
+            <input type="number" id="max-price" placeholder="50">
+            <button id="filter-price" class="btn">Filter by Price</button>
+        </div>
+    </div>
+</header>
+<section class="container" id="store-products"></section>
+<script src="../js/filter.js"></script>
 </body>
 </html>
