--- a/templates/item_view.html
+++ b/templates/item_view.html
@@ -101,7 +101,7 @@
 
 <div class="recommended">
   <h3>YOU MIGHT ALSO LIKE</h3>
-  <div id="recommendations"></div>
+  <div id="recommendations" class="mb-5"></div>
 </div>
 
 
