--- a/templates/search.html
+++ b/templates/search.html
@@ -38,8 +38,8 @@
                       <li><a class="dropdown-item" href="./signup.html"><i class="fa fa-user" aria-hidden="true"></i> Sign Up</a></li>
                       <li><a class="dropdown-item" href="./login.html"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Logout <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
-                    </ul>
+                      <li><a class="dropdown-item" href="./login.html" onclick="logoutUser()" >Logout <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
+                </ul>
                   </li>
                  
                 </ul>
