--- a/templates/login.html
+++ b/templates/login.html
@@ -71,7 +71,7 @@
                 <div class="error-message" id="loginError" hidden>Invalid username or password.</div>
                 <button type="submit" class="btn-log" id="login-btn">Login</button>
                 <a href="#" class="lost-password">Lost your password?</a>
-                <a href="./signup.html" class="lost-password">Have an account?</a>
+                <a href="./signup.html" class="lost-password">Don't have an account?</a>
             </form>
         </div>
     </div>
@@ -110,7 +110,6 @@
       <p>Copyright Tea House | by Team Tea House</p>
     </div>
   </footer>
-<script src="../js/index.js"></script>
 <script src="../js/login.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
