--- a/templates/signup.html
+++ b/templates/signup.html
@@ -83,7 +83,7 @@
             <button id="googleSignup">Signup with Google</button>
             <button id="facebookSignup">Signup with Facebook</button>
         </div>
-        <a href="./login.html" class="lost-password">Don't have an account?</a>
+        <a href="./login.html" class="lost-password">Have an account?</a>
   </div>
 
 </body>
@@ -121,7 +121,6 @@
     <p>Copyright Tea House | by Team Tea House</p>
   </div>
 </footer>
-<script src="../js/index.js"></script>
 <script src="../js/signup.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
